--- a/js-assignment2/code/app.css
+++ b/js-assignment2/code/app.css
@@ -5,13 +5,11 @@ GENERAL
     font-family: 'Source Sans Pro', sans-serif;
     box-sizing: border-box;
 }
-
 .wrapper {
     max-width: 800px;
     width: 90%;
     margin: 0 auto;
 }
-
 .primary-button {
     padding: 10px 30px;
     border-radius: 30px;
@@ -21,7 +19,6 @@ GENERAL
     font-size: 14px;
     margin-right: 10px;
 }
-
 .secondary-button {
     padding: 10px 30px;
     border-radius: 30px;
@@ -31,7 +28,6 @@ GENERAL
     font-size: 14px;
     margin-right: 10px;
 }
-
 /* - - - - - - - - - - - - - - - - - - - - - - - - 
 HEADER
 - - - - - - - - - - - - - - - - - - - - - - - - */
@@ -39,38 +35,39 @@ header {
     height: 80px;
     background: #333;
 }
-
 header nav .wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 80px;
 }
-
-header .menu {
-    background: url('./assets/menu.svg');
-    height: 30px;
-    width: 30px;
-    background-size: 30px;
-    display: none;
-}
-
 header .logo {
     background: url('./assets/logo.svg');
     height: 30px;
     width: 30px;
     background-size: 30px;
 }
-
-/* header .close {
-    background: url('./assets/close.svg');
+/* -------------------------------
+NEW SOFTWARE 
+------------------------------- */
+header .menu {
+    background: url("./assets/menu.svg");
     height: 30px;
     width: 30px;
     background-size: 30px;
     display: none;
-} */
-
-
+}
+header .close {
+    background: url("./assets/close.svg");
+    margin: 1.5em;
+    width: 35px;
+    height: 35px;
+    background-size: 35px;
+    display: none;
+}
+/* -------------------------------
+NEW SOFTWARE 
+------------------------------- */
 header ul {
     margin: 0;
     padding: 0;
@@ -78,66 +75,55 @@ header ul {
     width: 400px;
     justify-content: space-between;
 }
-
-/* header ul {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    width: 400px;
-    height: 40px;
-    background: blue;
-} */
-
-
-
 header li {
     color: white;
     list-style: none;
     margin: 0;
 }
-
 header a {
     color: white;
     text-decoration: none;
 }
-
-
-@media (max-width: 600px) {
+@media all and (max-width: 600px) {
     header ul {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    width: 300px;
-    height: 100vh;
-    transition: transform 0.2s;
-    transform: translateX(300px);
-    background: blue;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        right: -150px;
+        width: 150px;
+        height: 70vh;
+        background-color: #333;
+        border-bottom-left-radius: 3em;
+        border-color: black;
+
+        flex-direction: column;
+        justify-content: center;
+
+        transition: transform 1s;
+        transform: translatex(0px);
+    }
+    .menu-open {
+        transform: translateX(-150px);
+    }
+    .menu-close {
+        transform: translateX(0px);
     }
     header .menu {
         display: block;
     }
-    /* header .close {
-        display: block;
-        position: absolute;
-        top: 1em;
-        right: 1em;
-    } */
-    
-    /* .dropdown2  {
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        width: 300px;
-        height: 100vh;
-        transition: 0.2s;
-        transform: translateX(0px);
-    } */
+    header .close {
+        display: flex;
+        align-self: flex-end;
+        margin-bottom: 2.2em;
+    }
+    header a {
+        font-size: 1.5em;
+        margin: 1em 0 1em 0;
+        padding: 1em;
+        display: flex;
+        align-self: center;
+    }
 }
-
-
-
 /* - - - - - - - - - - - - - - - - - - - - - - - - 
 HERO
 - - - - - - - - - - - - - - - - - - - - - - - - */
@@ -145,7 +131,7 @@ HERO
     background: linear-gradient(
             rgba(255, 255, 255, 0.9),
             rgba(255, 255, 255, 0.4)
-        ),
+     ),
         url('https://images.unsplash.com/photo-1458668383970-8ddd3927deed?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1047&q=80');
     background-position: 50% 0%;
     background-size: cover;
@@ -153,7 +139,6 @@ HERO
     height: 70vh;
     padding-top: 10vh;
 }
-
 .hero h1 {
     font-size: 80px;
     font-weight: 300;
@@ -162,24 +147,20 @@ HERO
 .hero h2 {
     margin-top: 0;
 }
-
 .hero p {
     max-width: 500px;
     line-height: 1.6;
 }
-
 /* - - - - - - - - - - - - - - - - - - - - - - - - 
 MAIN CONTENT
 - - - - - - - - - - - - - - - - - - - - - - - - */
 .main-content {
     padding: 80px 0;
 }
-
 .main-content p {
     font-size: 16px;
     line-height: 1.6;
 }
-
 /* - - - - - - - - - - - - - - - - - - - - - - - - 
 FOOTER
 - - - - - - - - - - - - - - - - - - - - - - - - */
